# risk-model-for-credit-loans

./: .gitignore  README.md  puntaje_credicio_HEROE_O_VILLANO?.ipynb  pyproject.toml
data/: Historicos.csv  Vigentes.csv  credit_data.xlsx  credit_score_and_approvals.csv  education_and_credit_success.csv  final_statistics.csv  historical_preprocesed.csv  risk_probabilities.xlsx  sector_contribution_to_provision  sector_contribution_to_provision.csv
models/: risk_model.pkl
notebooks/: model_eval.ipynb  predict_risk.ipynb
