[tool.poetry]
name = "quantil"
version = "0.1.0"
description = ""
authors = ["santiagoahl <sahumadal@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.6.1"
shap = "^0.47.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
